# StrategyGame

./: .gitignore  CMakeLists.txt  LICENSE  README.md
common/: connection.hpp  packets.hpp
include/: app_state.hpp  behaviour_stack.hpp  chat.hpp  connection.hpp  game.hpp  game_packets.hpp  game_state.hpp  gui_button.hpp  gui_chatlog.hpp  gui_textbox.hpp  gui_writebox.hpp  hex.hpp  input.hpp  issues.hpp  loading_state.hpp  main_menu_state.hpp  module.hpp  player_state.hpp  rendering_controller.hpp  resource_store.hpp  resources.hpp  state_base.hpp  state_stack.hpp  test_state.hpp  ui_input.hpp  units.hpp  utils.hpp
include/behaviours/: loading_screen.hpp  main_game.hpp  main_menu.hpp
include/gui/: gui_button.hpp  gui_chatlog.hpp  gui_textbox.hpp  gui_writebox.hpp  simple_button.hpp
resources/modules/: direct_module.lua
resources/modules/action_keyboard_setup/: mod.lua
resources/modules/basic_hexes/: mod.lua
resources/modules/basic_hexes/hexes/: dirt.lua  grass.lua  mountain.lua  sand.lua  sand_rocks.lua  stone.lua  water.lua
resources/modules/basic_products/: mod.lua
resources/modules/basic_world_generators/: local_lib.lua  mod.lua
resources/modules/examplar_module/: mod.lua
server/: main.cpp
src/: behaviour_stack.cpp  connection.cpp  gui_chatlog.cpp  gui_textbox.cpp  gui_writebox.cpp  hex.cpp  input.cpp  loading_state.cpp  main.cpp  main_menu_state.cpp  module.cpp  packet_ids.cpp  packet_ids_game.cpp  resource_store.cpp  resources.cpp  state_base.cpp  state_stack.cpp  test_state.cpp  ui_input.cpp
src/behaviours/: main_game.cpp  main_menu.cpp
